--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         }
     ],
     "require": {
-        "backpack/crud": "^4.0.0|^5.0.0",
-        "spatie/laravel-medialibrary": "^9.0.0"
+        "backpack/crud": "^4.0.0|^5.5",
+        "spatie/laravel-medialibrary": "^9.0.0|10.0.0"
     },
     "require-dev": {
     },
